:icons: font

= Gentics Mesh Changelog

== 0.9.1 (28.03.2017)

icon:check[] The `Access-Control-Allow-Credentials: true` Header will now be returned when CORS support is enabled.

icon:check[] A NullPointerException within the Java Rest Client was fixed.

icon:check[] The AngularJS Demo was updated.

== 0.9.0 (27.03.2017)

icon:plus[] Gentics Mesh now supports GraphQL.

icon:important[] The `expandAll` and `expand` parameters will be removed within an upcoming release of Gentics Mesh. We highly recommend to use the GraphQL endpoint instead if you want to fetch deeply nested data.

icon:plus[] Schema name validation - Schema and microschema names must only contain letter, number or underscore characters.

icon:plus[] Node Tag Endpoint

The endpoint `/api/v1/:projectName/nodes/:nodeUuid/tags` was enhanced. It is now possible to post a list of tag references which will be applied to the node. Tags which are not part of the list will removed from the node. Tags which do not exist will be created. Please note that tag families will not automatically be created.

The `tags` field within the node response was updated accordingly.

== 0.8.3 (24.02.2017)

icon:plus[] Tags are now also indexed in the node document in the field `tagFamilies`, grouped by tag families.

== 0.8.2 (23.02.2017)

icon:check[] The trigram filter configuration was updated so that all characters will be used to tokenize the content.

== 0.8.1 (21.02.2017)

icon:check[] A bug which prevented index creation in certain cases was fixed.

== 0.8.0 (10.02.2017)

icon:plus[] Names, string fields and html field values will now be indexed using the https://www.elastic.co/guide/en/elasticsearch/guide/current/ngrams-compound-words.html[trigram analyzer].

icon:plus[] Binary Endpoint Overhaul

The field API endpoint `/api/v1/:projectName/nodes/:nodeUuid/languages/:language/fields/:field` was removed and replaced by the binary `/api/v1/:projectName/nodes/:nodeUuid/binary` endpoint.