@@ -25,7 +25,6 @@ import com.gentics.mesh.core.rest.node.field.list.NodeFieldList;
 import com.gentics.mesh.core.rest.node.field.list.impl.NodeFieldListImpl;
 import com.gentics.mesh.dagger.MeshInternal;
 import com.gentics.mesh.graphdb.spi.Database;
-import com.gentics.mesh.parameter.impl.NodeParametersImpl;
 import com.gentics.mesh.util.CompareUtils;
 
 public class NodeGraphFieldListImpl extends AbstractReferencingGraphFieldList<NodeGraphField, NodeFieldList, Node> implements NodeGraphFieldList {
@@ -67,8 +66,11 @@ public class NodeGraphFieldListImpl extends AbstractReferencingGraphFieldList<No
 		// Handle Update
 		BootstrapInitializer boot = MeshInternal.get()
 				.boot();
-		// Remove all and add the listed items
+
+		// Remove all current items 
 		graphNodeFieldList.removeAll();
+
+		// And now add the listed items
 		AtomicInteger integer = new AtomicInteger();
 		for (NodeFieldListItem item : nodeList.getItems()) {
 			if (item == null) {
