@@ -17,8 +17,7 @@ import com.gentics.mesh.rest.client.MeshRequest;
 public interface NodeClientMethods {
 
 	/**
-	 * Find the node with the given UUID in the project with the given name. The query parameters can be utilized to set the desired language and expand field
-	 * settings.
+	 * Find the node with the given UUID in the project with the given name. The query parameters can be utilized to set the desired language settings.
 	 * 
 	 * @param projectName
 	 * @param uuid
