@@ -8,10 +8,7 @@ import static org.junit.Assert.fail;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Properties;
 import java.util.Scanner;
-
-import javax.sound.sampled.Line;
 
 import org.assertj.core.api.AbstractAssert;
 
